@@ -98,6 +98,7 @@ Compiler_Features_23_Test
 Compiler_Features_24_Test
 Compiler_Features_25_Test
 Compiler_Features_26_Test
+Compiler_Features_27_Test
 Config_Test: !LynxOS !VxWorks !ACE_FOR_TAO
 Conn_Test: !ACE_FOR_TAO
 DLL_Test: !STATIC Linux
